<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AssignmentFour</string>
    
    <string name="TITLE_ACCELEROMETER">Accelerometer</string>
    <string name="BEGIN_ACCELEROMETER">Begin Measurement</string>
    <string name="PAUSE_ACCELEROMETER">Pause Measurement</string>
    <string name="WRITE">Write To A File</string>
    <string name="PLOT">Plot The Measurement</string>
    <string name="TEXTVIEW_HINT">Accelerometer measurement will be displayed here.</string>
        
    <string name="accel_service">Accelerometer Service</string>
    <string name="SAVE">Save</string>
    
	<string name="TITLE_BOX">BOX Interface</string>
    <string name="AUTHENTICATE">Authenticate</string>
    <string name="BOX_UPLOAD">BOX Upload</string>
    <string name="BOX_DOWNLOAD">BOX Download</string>
    
    <string name="TITLE_BLUETOOTH">Bluetooth Control</string>
    <string name="PAIRED_DEVICES">Paired Devices</string>
    <string name="NEW_DEVICES">New Devices</string>
    <string name="SEARCH">Search</string>
    <string name="SEARCHING">Searching Devices</string>
    <string name="SELECT_DEVICE">Select a Device to connect</string>
    <string name="NOT_FOUND">No Device found</string>
    <string name="BLUETOOTH_ON">Bluetooth On</string>
    <string name="BLUETOOTH_OFF">Bluetooth Off</string>
    <string name="CONNECT">Connect Bluetooth</string>
    <string name="SEND_DATA">Send Data </string>
    
    <string name="action_settings">Settings</string>

    <string name="BLUETOOTH_HINT">Bluetooth Status will be displayed here.</string>

</resources>