<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/textview_paired_devices_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/PAIRED_DEVICES"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        />
    
    <ListView 
        android:id="@+id/listview_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:stackFromBottom="true"
        android:layout_weight="1"
        />
    
    <TextView
        android:id="@+id/textview_new_devices_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/NEW_DEVICES"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        />
    
    <ListView
        android:id="@+id/listview_new_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_weight="2"
        />
    
    <Button
        android:id="@+id/button_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SEARCH"
        />

</LinearLayout>
